fix(styles): add z-index in Hero for Content Page

--- a/src/components/pages/content-page/hero/hero.module.scss
+++ b/src/components/pages/content-page/hero/hero.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  z-index: 0;
   margin-top: $header-height;
   margin-bottom: 90px;
   background-color: $color-additional-1;
@@ -17,6 +18,7 @@
 }
 
 .inner {
+  z-index: 1;
   padding-top: 90px;
   padding-bottom: 90px;
   text-align: center;
